# c-monitoring

./: .gitignore  .pre-commit-config.yaml  Doxyfile  Makefile  README.md  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.map  main_8c__incl.md5  monitor_8c.html  monitor_8c__incl.map  monitor_8c__incl.md5  monitor_8h.html  monitor_8h__dep__incl.map  monitor_8h__dep__incl.md5  monitor_8h__incl.map  monitor_8h__incl.md5  monitor_8h_source.html  monitor_fd.c  monitor_fd.h  pyproject.toml  structArguments-members.html  structArguments.html  structDescriptorsArray-members.html  structDescriptorsArray.html  utils_8c.html  (+9 more)
.github/workflows/: build-bindings.yaml  (+2 more)
fd-watcher-rust/: Cargo.toml
scripts/: generate_cython_headers.py
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js
src/: main.c  monitor.c  monitor.h  monitor_fd.c  monitor_fd.h  utils.c  utils.h  watch_fd.c
(+18 files in other folders)
